Lineamientos_Nuevos_Borradores/versionamiento/ejemplos-plantillas-gitlab/template-frontend-angular/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-nombre-sistema
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: frontend-nombre-sistema
  ports:
    - name: http
      port: 80
      targetPort: http
